LAB01/y.output
Terminals unused in grammar

   DO
   BREAK
   CONTINUE
   CHAR
   DOUBLE
   SWITCH
   CASE
   DEFAULT


Grammar

    0 $accept: start $end

    1 start: program

    2 program: program unit
    3        | unit

    4 unit: var_declaration
    5     | func_definition

    6 func_definition: type_specifier ID LPAREN parameter_list RPAREN compound_statement
    7                | type_specifier ID LPAREN RPAREN compound_statement

    8 parameter_list: parameter_list COMMA type_specifier ID
    9               | parameter_list COMMA type_specifier
   10               | type_specifier ID
   11               | type_specifier

   12 compound_statement: LCURL statements RCURL
   13                   | LCURL RCURL

   14 var_declaration: type_specifier declaration_list SEMICOLON

   15 declaration_list: declaration_list COMMA ID
   16                 | declaration_list COMMA ID LTHIRD CONST_INT RTHIRD
   17                 | ID
   18                 | ID LTHIRD CONST_INT RTHIRD

   19 type_specifier: INT
   20               | FLOAT
   21               | VOID

   22 statements: statements statement
   23           | statement

   24 statement: var_declaration
   25          | expression_statement
   26          | compound_statement
   27          | FOR LPAREN expression_statement expression_statement expression RPAREN statement
   28          | IF LPAREN expression RPAREN statement
   29          | IF LPAREN expression RPAREN statement ELSE statement
   30          | WHILE LPAREN expression RPAREN statement
   31          | PRINTLN LPAREN ID RPAREN SEMICOLON
   32          | RETURN expression SEMICOLON

   33 expression_statement: SEMICOLON
   34                     | expression SEMICOLON

   35 expression: logic_expression
   36           | variable ASSIGNOP logic_expression

   37 logic_expression: rel_expression
   38                 | rel_expression LOGICOP rel_expression

   39 rel_expression: simple_expression
   40               | simple_expression RELOP simple_expression

   41 simple_expression: term
   42                  | simple_expression ADDOP term

   43 term: unary_expression
   44     | term MULOP unary_expression

   45 unary_expression: factor
   46                 | ADDOP unary_expression
   47                 | NOT unary_expression

   48 factor: variable
   49       | ID LPAREN argument_list RPAREN
   50       | LPAREN expression RPAREN
   51       | CONST_INT
   52       | CONST_FLOAT
   53       | variable INCOP
   54       | variable DECOP

   55 argument_list: arguments
   56              | /* empty */

   57 arguments: arguments COMMA logic_expression
   58          | logic_expression

   59 variable: ID
   60         | ID LTHIRD expression RTHIRD


Terminals, with rules where they appear

$end (0) 0
error (256)
IF (258) 28 29
ELSE (259) 29
FOR (260) 27
WHILE (261) 30
DO (262)
BREAK (263)
CONTINUE (264)
RETURN (265) 32
INT (266) 19
FLOAT (267) 20
CHAR (268)
VOID (269) 21
DOUBLE (270)
SWITCH (271)
CASE (272)
DEFAULT (273)
PRINTLN (274) 31
ADDOP (275) 42 46
MULOP (276) 44
INCOP (277) 53
DECOP (278) 54
RELOP (279) 40
ASSIGNOP (280) 36
LOGICOP (281) 38
NOT (282) 47
LPAREN (283) 6 7 27 28 29 30 31 49 50
RPAREN (284) 6 7 27 28 29 30 31 49 50
LCURL (285) 12 13
RCURL (286) 12 13
LTHIRD (287) 16 18 60
RTHIRD (288) 16 18 60
SEMICOLON (289) 14 31 32 33 34
COMMA (290) 8 9 15 16 57
ID (291) 6 7 8 10 15 16 17 18 31 49 59 60
CONST_INT (292) 16 18 51
CONST_FLOAT (293) 52
LOWER_THAN_ELSE (294)


Nonterminals, with rules where they appear

$accept (40)
    on left: 0
start (41)
    on left: 1, on right: 0
program (42)
    on left: 2 3, on right: 1 2
unit (43)
    on left: 4 5, on right: 2 3
func_definition (44)
    on left: 6 7, on right: 5
parameter_list (45)
    on left: 8 9 10 11, on right: 6 8 9
compound_statement (46)
    on left: 12 13, on right: 6 7 26
var_declaration (47)
    on left: 14, on right: 4 24
declaration_list (48)
    on left: 15 16 17 18, on right: 14 15 16
type_specifier (49)
    on left: 19 20 21, on right: 6 7 8 9 10 11 14
statements (50)
    on left: 22 23, on right: 12 22
statement (51)
    on left: 24 25 26 27 28 29 30 31 32, on right: 22 23 27 28 29 30
expression_statement (52)
    on left: 33 34, on right: 25 27
expression (53)
    on left: 35 36, on right: 27 28 29 30 32 34 50 60
logic_expression (54)
    on left: 37 38, on right: 35 36 57 58
rel_expression (55)
    on left: 39 40, on right: 37 38
simple_expression (56)
    on left: 41 42, on right: 39 40 42
term (57)
    on left: 43 44, on right: 41 42 44
unary_expression (58)
    on left: 45 46 47, on right: 43 44 46 47
factor (59)
    on left: 48 49 50 51 52 53 54, on right: 45
argument_list (60)
    on left: 55 56, on right: 49
arguments (61)
    on left: 57 58, on right: 55 57
variable (62)
    on left: 59 60, on right: 36 48 53 54


State 0

    0 $accept: . start $end

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    start            go to state 4
    program          go to state 5
    unit             go to state 6
    func_definition  go to state 7
    var_declaration  go to state 8
    type_specifier   go to state 9


State 1

   19 type_specifier: INT .

    $default  reduce using rule 19 (type_specifier)


State 2

   20 type_specifier: FLOAT .

    $default  reduce using rule 20 (type_specifier)


State 3

   21 type_specifier: VOID .

    $default  reduce using rule 21 (type_specifier)


State 4

    0 $accept: start . $end

    $end  shift, and go to state 10


State 5

    1 start: program .
    2 program: program . unit

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    $default  reduce using rule 1 (start)

    unit             go to state 11
    func_definition  go to state 7
    var_declaration  go to state 8
    type_specifier   go to state 9


State 6

    3 program: unit .

    $default  reduce using rule 3 (program)


State 7

    5 unit: func_definition .

    $default  reduce using rule 5 (unit)


State 8

    4 unit: var_declaration .

    $default  reduce using rule 4 (unit)


State 9

    6 func_definition: type_specifier . ID LPAREN parameter_list RPAREN compound_statement
    7                | type_specifier . ID LPAREN RPAREN compound_statement
   14 var_declaration: type_specifier . declaration_list SEMICOLON

    ID  shift, and go to state 12

    declaration_list  go to state 13


State 10

    0 $accept: start $end .

    $default  accept


State 11

    2 program: program unit .

    $default  reduce using rule 2 (program)


State 12

    6 func_definition: type_specifier ID . LPAREN parameter_list RPAREN compound_statement
    7                | type_specifier ID . LPAREN RPAREN compound_statement
   17 declaration_list: ID .
   18                 | ID . LTHIRD CONST_INT RTHIRD

    LPAREN  shift, and go to state 14
    LTHIRD  shift, and go to state 15

    $default  reduce using rule 17 (declaration_list)


State 13

   14 var_declaration: type_specifier declaration_list . SEMICOLON
   15 declaration_list: declaration_list . COMMA ID
   16                 | declaration_list . COMMA ID LTHIRD CONST_INT RTHIRD

    SEMICOLON  shift, and go to state 16
    COMMA      shift, and go to state 17


State 14

    6 func_definition: type_specifier ID LPAREN . parameter_list RPAREN compound_statement
    7                | type_specifier ID LPAREN . RPAREN compound_statement

    INT     shift, and go to state 1
    FLOAT   shift, and go to state 2
    VOID    shift, and go to state 3
    RPAREN  shift, and go to state 18

    parameter_list  go to state 19
    type_specifier  go to state 20


State 15

   18 declaration_list: ID LTHIRD . CONST_INT RTHIRD

    CONST_INT  shift, and go to state 21


State 16

   14 var_declaration: type_specifier declaration_list SEMICOLON .

    $default  reduce using rule 14 (var_declaration)


State 17

   15 declaration_list: declaration_list COMMA . ID
   16                 | declaration_list COMMA . ID LTHIRD CONST_INT RTHIRD

    ID  shift, and go to state 22


State 18

    7 func_definition: type_specifier ID LPAREN RPAREN . compound_statement

    LCURL  shift, and go to state 23

    compound_statement  go to state 24


State 19

    6 func_definition: type_specifier ID LPAREN parameter_list . RPAREN compound_statement
    8 parameter_list: parameter_list . COMMA type_specifier ID
    9               | parameter_list . COMMA type_specifier

    RPAREN  shift, and go to state 25
    COMMA   shift, and go to state 26


State 20

   10 parameter_list: type_specifier . ID
   11               | type_specifier .

    ID  shift, and go to state 27

    $default  reduce using rule 11 (parameter_list)


State 21

   18 declaration_list: ID LTHIRD CONST_INT . RTHIRD

    RTHIRD  shift, and go to state 28


State 22

   15 declaration_list: declaration_list COMMA ID .
   16                 | declaration_list COMMA ID . LTHIRD CONST_INT RTHIRD

    LTHIRD  shift, and go to state 29

    $default  reduce using rule 15 (declaration_list)


State 23

   12 compound_statement: LCURL . statements RCURL
   13                   | LCURL . RCURL

    IF           shift, and go to state 30
    FOR          shift, and go to state 31
    WHILE        shift, and go to state 32
    RETURN       shift, and go to state 33
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    PRINTLN      shift, and go to state 34
    ADDOP        shift, and go to state 35
    NOT          shift, and go to state 36
    LPAREN       shift, and go to state 37
    LCURL        shift, and go to state 23
    RCURL        shift, and go to state 38
    SEMICOLON    shift, and go to state 39
    ID           shift, and go to state 40
    CONST_INT    shift, and go to state 41
    CONST_FLOAT  shift, and go to state 42

    compound_statement    go to state 43
    var_declaration       go to state 44
    type_specifier        go to state 45
    statements            go to state 46
    statement             go to state 47
    expression_statement  go to state 48
    expression            go to state 49
    logic_expression      go to state 50
    rel_expression        go to state 51
    simple_expression     go to state 52
    term                  go to state 53
    unary_expression      go to state 54
    factor                go to state 55
    variable              go to state 56


State 24

    7 func_definition: type_specifier ID LPAREN RPAREN compound_statement .

    $default  reduce using rule 7 (func_definition)


State 25

    6 func_definition: type_specifier ID LPAREN parameter_list RPAREN . compound_statement

    LCURL  shift, and go to state 23

    compound_statement  go to state 57


State 26

    8 parameter_list: parameter_list COMMA . type_specifier ID
    9               | parameter_list COMMA . type_specifier

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    type_specifier  go to state 58


State 27

   10 parameter_list: type_specifier ID .

    $default  reduce using rule 10 (parameter_list)


State 28

   18 declaration_list: ID LTHIRD CONST_INT RTHIRD .

    $default  reduce using rule 18 (declaration_list)


State 29

   16 declaration_list: declaration_list COMMA ID LTHIRD . CONST_INT RTHIRD

    CONST_INT  shift, and go to state 59


State 30

   28 statement: IF . LPAREN expression RPAREN statement
   29          | IF . LPAREN expression RPAREN statement ELSE statement

    LPAREN  shift, and go to state 60


State 31

   27 statement: FOR . LPAREN expression_statement expression_statement expression RPAREN statement

    LPAREN  shift, and go to state 61


State 32

   30 statement: WHILE . LPAREN expression RPAREN statement

    LPAREN  shift, and go to state 62


State 33

   32 statement: RETURN . expression SEMICOLON

    ADDOP        shift, and go to state 35
    NOT          shift, and go to state 36
    LPAREN       shift, and go to state 37
    ID           shift, and go to state 40
    CONST_INT    shift, and go to state 41
    CONST_FLOAT  shift, and go to state 42

    expression         go to state 63
    logic_expression   go to state 50
    rel_expression     go to state 51
    simple_expression  go to state 52
    term               go to state 53
    unary_expression   go to state 54
    factor             go to state 55
    variable           go to state 56


State 34

   31 statement: PRINTLN . LPAREN ID RPAREN SEMICOLON

    LPAREN  shift, and go to state 64


State 35

   46 unary_expression: ADDOP . unary_expression

    ADDOP        shift, and go to state 35
    NOT          shift, and go to state 36
    LPAREN       shift, and go to state 37
    ID           shift, and go to state 40
    CONST_INT    shift, and go to state 41
    CONST_FLOAT  shift, and go to state 42

    unary_expression  go to state 65
    factor            go to state 55
    variable          go to state 66


State 36

   47 unary_expression: NOT . unary_expression

    ADDOP        shift, and go to state 35
    NOT          shift, and go to state 36
    LPAREN       shift, and go to state 37
    ID           shift, and go to state 40
    CONST_INT    shift, and go to state 41
    CONST_FLOAT  shift, and go to state 42

    unary_expression  go to state 67
    factor            go to state 55
    variable          go to state 66


State 37

   50 factor: LPAREN . expression RPAREN

    ADDOP        shift, and go to state 35
    NOT          shift, and go to state 36
    LPAREN       shift, and go to state 37
    ID           shift, and go to state 40
    CONST_INT    shift, and go to state 41
    CONST_FLOAT  shift, and go to state 42

    expression         go to state 68
    logic_expression   go to state 50
    rel_expression     go to state 51
    simple_expression  go to state 52
    term               go to state 53
    unary_expression   go to state 54
    factor             go to state 55
    variable           go to state 56


State 38

   13 compound_statement: LCURL RCURL .

    $default  reduce using rule 13 (compound_statement)


State 39

   33 expression_statement: SEMICOLON .

    $default  reduce using rule 33 (expression_statement)


State 40

   49 factor: ID . LPAREN argument_list RPAREN
   59 variable: ID .
   60         | ID . LTHIRD expression RTHIRD

    LPAREN  shift, and go to state 69
    LTHIRD  shift, and go to state 70

    $default  reduce using rule 59 (variable)


State 41

   51 factor: CONST_INT .

    $default  reduce using rule 51 (factor)


State 42

   52 factor: CONST_FLOAT .

    $default  reduce using rule 52 (factor)


State 43

   26 statement: compound_statement .

    $default  reduce using rule 26 (statement)


State 44

   24 statement: var_declaration .

    $default  reduce using rule 24 (statement)


State 45

   14 var_declaration: type_specifier . declaration_list SEMICOLON

    ID  shift, and go to state 71

    declaration_list  go to state 13


State 46

   12 compound_statement: LCURL statements . RCURL
   22 statements: statements . statement

    IF           shift, and go to state 30
    FOR          shift, and go to state 31
    WHILE        shift, and go to state 32
    RETURN       shift, and go to state 33
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    PRINTLN      shift, and go to state 34
    ADDOP        shift, and go to state 35
    NOT          shift, and go to state 36
    LPAREN       shift, and go to state 37
    LCURL        shift, and go to state 23
    RCURL        shift, and go to state 72
    SEMICOLON    shift, and go to state 39
    ID           shift, and go to state 40
    CONST_INT    shift, and go to state 41
    CONST_FLOAT  shift, and go to state 42

    compound_statement    go to state 43
    var_declaration       go to state 44
    type_specifier        go to state 45
    statement             go to state 73
    expression_statement  go to state 48
    expression            go to state 49
    logic_expression      go to state 50
    rel_expression        go to state 51
    simple_expression     go to state 52
    term                  go to state 53
    unary_expression      go to state 54
    factor                go to state 55
    variable              go to state 56


State 47

   23 statements: statement .

    $default  reduce using rule 23 (statements)


State 48

   25 statement: expression_statement .

    $default  reduce using rule 25 (statement)


State 49

   34 expression_statement: expression . SEMICOLON

    SEMICOLON  shift, and go to state 74


State 50

   35 expression: logic_expression .

    $default  reduce using rule 35 (expression)


State 51

   37 logic_expression: rel_expression .
   38                 | rel_expression . LOGICOP rel_expression

    LOGICOP  shift, and go to state 75

    $default  reduce using rule 37 (logic_expression)


State 52

   39 rel_expression: simple_expression .
   40               | simple_expression . RELOP simple_expression
   42 simple_expression: simple_expression . ADDOP term

    ADDOP  shift, and go to state 76
    RELOP  shift, and go to state 77

    $default  reduce using rule 39 (rel_expression)


State 53

   41 simple_expression: term .
   44 term: term . MULOP unary_expression

    MULOP  shift, and go to state 78

    $default  reduce using rule 41 (simple_expression)


State 54

   43 term: unary_expression .

    $default  reduce using rule 43 (term)


State 55

   45 unary_expression: factor .

    $default  reduce using rule 45 (unary_expression)


State 56

   36 expression: variable . ASSIGNOP logic_expression
   48 factor: variable .
   53       | variable . INCOP
   54       | variable . DECOP

    INCOP     shift, and go to state 79
    DECOP     shift, and go to state 80
    ASSIGNOP  shift, and go to state 81

    $default  reduce using rule 48 (factor)


State 57

    6 func_definition: type_specifier ID LPAREN parameter_list RPAREN compound_statement .

    $default  reduce using rule 6 (func_definition)


State 58

    8 parameter_list: parameter_list COMMA type_specifier . ID
    9               | parameter_list COMMA type_specifier .

    ID  shift, and go to state 82

    $default  reduce using rule 9 (parameter_list)


State 59

   16 declaration_list: declaration_list COMMA ID LTHIRD CONST_INT . RTHIRD

    RTHIRD  shift, and go to state 83


State 60

   28 statement: IF LPAREN . expression RPAREN statement
   29          | IF LPAREN . expression RPAREN statement ELSE statement

    ADDOP        shift, and go to state 35
    NOT          shift, and go to state 36
    LPAREN       shift, and go to state 37
    ID           shift, and go to state 40
    CONST_INT    shift, and go to state 41
    CONST_FLOAT  shift, and go to state 42

    expression         go to state 84
    logic_expression   go to state 50
    rel_expression     go to state 51
    simple_expression  go to state 52
    term               go to state 53
    unary_expression   go to state 54
    factor             go to state 55
    variable           go to state 56


State 61

   27 statement: FOR LPAREN . expression_statement expression_statement expression RPAREN statement

    ADDOP        shift, and go to state 35
    NOT          shift, and go to state 36
    LPAREN       shift, and go to state 37
    SEMICOLON    shift, and go to state 39
    ID           shift, and go to state 40
    CONST_INT    shift, and go to state 41
    CONST_FLOAT  shift, and go to state 42

    expression_statement  go to state 85
    expression            go to state 49
    logic_expression      go to state 50
    rel_expression        go to state 51
    simple_expression     go to state 52
    term                  go to state 53
    unary_expression      go to state 54
    factor                go to state 55
    variable              go to state 56


State 62

   30 statement: WHILE LPAREN . expression RPAREN statement

    ADDOP        shift, and go to state 35
    NOT          shift, and go to state 36
    LPAREN       shift, and go to state 37
    ID           shift, and go to state 40
    CONST_INT    shift, and go to state 41
    CONST_FLOAT  shift, and go to state 42

    expression         go to state 86
    logic_expression   go to state 50
    rel_expression     go to state 51
    simple_expression  go to state 52
    term               go to state 53
    unary_expression   go to state 54
    factor             go to state 55
    variable           go to state 56


State 63

   32 statement: RETURN expression . SEMICOLON

    SEMICOLON  shift, and go to state 87


State 64

   31 statement: PRINTLN LPAREN . ID RPAREN SEMICOLON

    ID  shift, and go to state 88


State 65

   46 unary_expression: ADDOP unary_expression .

    $default  reduce using rule 46 (unary_expression)


State 66

   48 factor: variable .
   53       | variable . INCOP
   54       | variable . DECOP

    INCOP  shift, and go to state 79
    DECOP  shift, and go to state 80

    $default  reduce using rule 48 (factor)


State 67

   47 unary_expression: NOT unary_expression .

    $default  reduce using rule 47 (unary_expression)


State 68

   50 factor: LPAREN expression . RPAREN

    RPAREN  shift, and go to state 89


State 69

   49 factor: ID LPAREN . argument_list RPAREN

    ADDOP        shift, and go to state 35
    NOT          shift, and go to state 36
    LPAREN       shift, and go to state 37
    ID           shift, and go to state 40
    CONST_INT    shift, and go to state 41
    CONST_FLOAT  shift, and go to state 42

    $default  reduce using rule 56 (argument_list)

    logic_expression   go to state 90
    rel_expression     go to state 51
    simple_expression  go to state 52
    term               go to state 53
    unary_expression   go to state 54
    factor             go to state 55
    argument_list      go to state 91
    arguments          go to state 92
    variable           go to state 66


State 70

   60 variable: ID LTHIRD . expression RTHIRD

    ADDOP        shift, and go to state 35
    NOT          shift, and go to state 36
    LPAREN       shift, and go to state 37
    ID           shift, and go to state 40
    CONST_INT    shift, and go to state 41
    CONST_FLOAT  shift, and go to state 42

    expression         go to state 93
    logic_expression   go to state 50
    rel_expression     go to state 51
    simple_expression  go to state 52
    term               go to state 53
    unary_expression   go to state 54
    factor             go to state 55
    variable           go to state 56


State 71

   17 declaration_list: ID .
   18                 | ID . LTHIRD CONST_INT RTHIRD

    LTHIRD  shift, and go to state 15

    $default  reduce using rule 17 (declaration_list)


State 72

   12 compound_statement: LCURL statements RCURL .

    $default  reduce using rule 12 (compound_statement)


State 73

   22 statements: statements statement .

    $default  reduce using rule 22 (statements)


State 74

   34 expression_statement: expression SEMICOLON .

    $default  reduce using rule 34 (expression_statement)


State 75

   38 logic_expression: rel_expression LOGICOP . rel_expression

    ADDOP        shift, and go to state 35
    NOT          shift, and go to state 36
    LPAREN       shift, and go to state 37
    ID           shift, and go to state 40
    CONST_INT    shift, and go to state 41
    CONST_FLOAT  shift, and go to state 42

    rel_expression     go to state 94
    simple_expression  go to state 52
    term               go to state 53
    unary_expression   go to state 54
    factor             go to state 55
    variable           go to state 66


State 76

   42 simple_expression: simple_expression ADDOP . term

    ADDOP        shift, and go to state 35
    NOT          shift, and go to state 36
    LPAREN       shift, and go to state 37
    ID           shift, and go to state 40
    CONST_INT    shift, and go to state 41
    CONST_FLOAT  shift, and go to state 42

    term              go to state 95
    unary_expression  go to state 54
    factor            go to state 55
    variable          go to state 66


State 77

   40 rel_expression: simple_expression RELOP . simple_expression

    ADDOP        shift, and go to state 35
    NOT          shift, and go to state 36
    LPAREN       shift, and go to state 37
    ID           shift, and go to state 40
    CONST_INT    shift, and go to state 41
    CONST_FLOAT  shift, and go to state 42

    simple_expression  go to state 96
    term               go to state 53
    unary_expression   go to state 54
    factor             go to state 55
    variable           go to state 66


State 78

   44 term: term MULOP . unary_expression

    ADDOP        shift, and go to state 35
    NOT          shift, and go to state 36
    LPAREN       shift, and go to state 37
    ID           shift, and go to state 40
    CONST_INT    shift, and go to state 41
    CONST_FLOAT  shift, and go to state 42

    unary_expression  go to state 97
    factor            go to state 55
    variable          go to state 66


State 79

   53 factor: variable INCOP .

    $default  reduce using rule 53 (factor)


State 80

   54 factor: variable DECOP .

    $default  reduce using rule 54 (factor)


State 81

   36 expression: variable ASSIGNOP . logic_expression

    ADDOP        shift, and go to state 35
    NOT          shift, and go to state 36
    LPAREN       shift, and go to state 37
    ID           shift, and go to state 40
    CONST_INT    shift, and go to state 41
    CONST_FLOAT  shift, and go to state 42

    logic_expression   go to state 98
    rel_expression     go to state 51
    simple_expression  go to state 52
    term               go to state 53
    unary_expression   go to state 54
    factor             go to state 55
    variable           go to state 66


State 82

    8 parameter_list: parameter_list COMMA type_specifier ID .

    $default  reduce using rule 8 (parameter_list)


State 83

   16 declaration_list: declaration_list COMMA ID LTHIRD CONST_INT RTHIRD .

    $default  reduce using rule 16 (declaration_list)


State 84

   28 statement: IF LPAREN expression . RPAREN statement
   29          | IF LPAREN expression . RPAREN statement ELSE statement

    RPAREN  shift, and go to state 99


State 85

   27 statement: FOR LPAREN expression_statement . expression_statement expression RPAREN statement

    ADDOP        shift, and go to state 35
    NOT          shift, and go to state 36
    LPAREN       shift, and go to state 37
    SEMICOLON    shift, and go to state 39
    ID           shift, and go to state 40
    CONST_INT    shift, and go to state 41
    CONST_FLOAT  shift, and go to state 42

    expression_statement  go to state 100
    expression            go to state 49
    logic_expression      go to state 50
    rel_expression        go to state 51
    simple_expression     go to state 52
    term                  go to state 53
    unary_expression      go to state 54
    factor                go to state 55
    variable              go to state 56


State 86

   30 statement: WHILE LPAREN expression . RPAREN statement

    RPAREN  shift, and go to state 101


State 87

   32 statement: RETURN expression SEMICOLON .

    $default  reduce using rule 32 (statement)


State 88

   31 statement: PRINTLN LPAREN ID . RPAREN SEMICOLON

    RPAREN  shift, and go to state 102


State 89

   50 factor: LPAREN expression RPAREN .

    $default  reduce using rule 50 (factor)


State 90

   58 arguments: logic_expression .

    $default  reduce using rule 58 (arguments)


State 91

   49 factor: ID LPAREN argument_list . RPAREN

    RPAREN  shift, and go to state 103


State 92

   55 argument_list: arguments .
   57 arguments: arguments . COMMA logic_expression

    COMMA  shift, and go to state 104

    $default  reduce using rule 55 (argument_list)


State 93

   60 variable: ID LTHIRD expression . RTHIRD

    RTHIRD  shift, and go to state 105


State 94

   38 logic_expression: rel_expression LOGICOP rel_expression .

    $default  reduce using rule 38 (logic_expression)


State 95

   42 simple_expression: simple_expression ADDOP term .
   44 term: term . MULOP unary_expression

    MULOP  shift, and go to state 78

    $default  reduce using rule 42 (simple_expression)


State 96

   40 rel_expression: simple_expression RELOP simple_expression .
   42 simple_expression: simple_expression . ADDOP term

    ADDOP  shift, and go to state 76

    $default  reduce using rule 40 (rel_expression)


State 97

   44 term: term MULOP unary_expression .

    $default  reduce using rule 44 (term)


State 98

   36 expression: variable ASSIGNOP logic_expression .

    $default  reduce using rule 36 (expression)


State 99

   28 statement: IF LPAREN expression RPAREN . statement
   29          | IF LPAREN expression RPAREN . statement ELSE statement

    IF           shift, and go to state 30
    FOR          shift, and go to state 31
    WHILE        shift, and go to state 32
    RETURN       shift, and go to state 33
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    PRINTLN      shift, and go to state 34
    ADDOP        shift, and go to state 35
    NOT          shift, and go to state 36
    LPAREN       shift, and go to state 37
    LCURL        shift, and go to state 23
    SEMICOLON    shift, and go to state 39
    ID           shift, and go to state 40
    CONST_INT    shift, and go to state 41
    CONST_FLOAT  shift, and go to state 42

    compound_statement    go to state 43
    var_declaration       go to state 44
    type_specifier        go to state 45
    statement             go to state 106
    expression_statement  go to state 48
    expression            go to state 49
    logic_expression      go to state 50
    rel_expression        go to state 51
    simple_expression     go to state 52
    term                  go to state 53
    unary_expression      go to state 54
    factor                go to state 55
    variable              go to state 56


State 100

   27 statement: FOR LPAREN expression_statement expression_statement . expression RPAREN statement

    ADDOP        shift, and go to state 35
    NOT          shift, and go to state 36
    LPAREN       shift, and go to state 37
    ID           shift, and go to state 40
    CONST_INT    shift, and go to state 41
    CONST_FLOAT  shift, and go to state 42

    expression         go to state 107
    logic_expression   go to state 50
    rel_expression     go to state 51
    simple_expression  go to state 52
    term               go to state 53
    unary_expression   go to state 54
    factor             go to state 55
    variable           go to state 56


State 101

   30 statement: WHILE LPAREN expression RPAREN . statement

    IF           shift, and go to state 30
    FOR          shift, and go to state 31
    WHILE        shift, and go to state 32
    RETURN       shift, and go to state 33
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    PRINTLN      shift, and go to state 34
    ADDOP        shift, and go to state 35
    NOT          shift, and go to state 36
    LPAREN       shift, and go to state 37
    LCURL        shift, and go to state 23
    SEMICOLON    shift, and go to state 39
    ID           shift, and go to state 40
    CONST_INT    shift, and go to state 41
    CONST_FLOAT  shift, and go to state 42

    compound_statement    go to state 43
    var_declaration       go to state 44
    type_specifier        go to state 45
    statement             go to state 108
    expression_statement  go to state 48
    expression            go to state 49
    logic_expression      go to state 50
    rel_expression        go to state 51
    simple_expression     go to state 52
    term                  go to state 53
    unary_expression      go to state 54
    factor                go to state 55
    variable              go to state 56


State 102

   31 statement: PRINTLN LPAREN ID RPAREN . SEMICOLON

    SEMICOLON  shift, and go to state 109


State 103

   49 factor: ID LPAREN argument_list RPAREN .

    $default  reduce using rule 49 (factor)


State 104

   57 arguments: arguments COMMA . logic_expression

    ADDOP        shift, and go to state 35
    NOT          shift, and go to state 36
    LPAREN       shift, and go to state 37
    ID           shift, and go to state 40
    CONST_INT    shift, and go to state 41
    CONST_FLOAT  shift, and go to state 42

    logic_expression   go to state 110
    rel_expression     go to state 51
    simple_expression  go to state 52
    term               go to state 53
    unary_expression   go to state 54
    factor             go to state 55
    variable           go to state 66


State 105

   60 variable: ID LTHIRD expression RTHIRD .

    $default  reduce using rule 60 (variable)


State 106

   28 statement: IF LPAREN expression RPAREN statement .
   29          | IF LPAREN expression RPAREN statement . ELSE statement

    ELSE  shift, and go to state 111

    $default  reduce using rule 28 (statement)


State 107

   27 statement: FOR LPAREN expression_statement expression_statement expression . RPAREN statement

    RPAREN  shift, and go to state 112


State 108

   30 statement: WHILE LPAREN expression RPAREN statement .

    $default  reduce using rule 30 (statement)


State 109

   31 statement: PRINTLN LPAREN ID RPAREN SEMICOLON .

    $default  reduce using rule 31 (statement)


State 110

   57 arguments: arguments COMMA logic_expression .

    $default  reduce using rule 57 (arguments)


State 111

   29 statement: IF LPAREN expression RPAREN statement ELSE . statement

    IF           shift, and go to state 30
    FOR          shift, and go to state 31
    WHILE        shift, and go to state 32
    RETURN       shift, and go to state 33
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    PRINTLN      shift, and go to state 34
    ADDOP        shift, and go to state 35
    NOT          shift, and go to state 36
    LPAREN       shift, and go to state 37
    LCURL        shift, and go to state 23
    SEMICOLON    shift, and go to state 39
    ID           shift, and go to state 40
    CONST_INT    shift, and go to state 41
    CONST_FLOAT  shift, and go to state 42

    compound_statement    go to state 43
    var_declaration       go to state 44
    type_specifier        go to state 45
    statement             go to state 113
    expression_statement  go to state 48
    expression            go to state 49
    logic_expression      go to state 50
    rel_expression        go to state 51
    simple_expression     go to state 52
    term                  go to state 53
    unary_expression      go to state 54
    factor                go to state 55
    variable              go to state 56


State 112

   27 statement: FOR LPAREN expression_statement expression_statement expression RPAREN . statement

    IF           shift, and go to state 30
    FOR          shift, and go to state 31
    WHILE        shift, and go to state 32
    RETURN       shift, and go to state 33
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    PRINTLN      shift, and go to state 34
    ADDOP        shift, and go to state 35
    NOT          shift, and go to state 36
    LPAREN       shift, and go to state 37
    LCURL        shift, and go to state 23
    SEMICOLON    shift, and go to state 39
    ID           shift, and go to state 40
    CONST_INT    shift, and go to state 41
    CONST_FLOAT  shift, and go to state 42

    compound_statement    go to state 43
    var_declaration       go to state 44
    type_specifier        go to state 45
    statement             go to state 114
    expression_statement  go to state 48
    expression            go to state 49
    logic_expression      go to state 50
    rel_expression        go to state 51
    simple_expression     go to state 52
    term                  go to state 53
    unary_expression      go to state 54
    factor                go to state 55
    variable              go to state 56


State 113

   29 statement: IF LPAREN expression RPAREN statement ELSE statement .

    $default  reduce using rule 29 (statement)


State 114

   27 statement: FOR LPAREN expression_statement expression_statement expression RPAREN statement .

    $default  reduce using rule 27 (statement)
